tests/ui/intrinsics/issue-28575.thir.stderr
error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/issue-28575.rs:11:5
   |
LL |     FOO()
   |     ^^^ use of extern static
   |
   = note: extern statics are not controlled by the CrabLang type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0133`.
